# events-backend

./: .cz.toml  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose-test.yml  docker-compose.yml  pyproject.toml
.docker/: Dockerfile  TestsDockerfile
.github/workflows/: main-workflow.yml  pr-workflow.yml
alembic/: env.py
alembic/versions/: baa9097006be_new_migration.py
app/: backend_pre_start.py  main.py
app/core/: logger.py  main_router.py
app/core/db/: mock_session.py  session.py
app/events/: __init__.py  models.py  schema.py  views.py
app/tests/: test_events.py
