[tool.poetry]
name = "events-backend"
version = "1.1.0"
description = "GoEventure Events FastAPI backend."
authors = ["Brian Hopkins"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
FastAPI-SQLAlchemy = "^0.2.1"
orjson = "^3.9.1"
pydantic = "^1.10.9"
python-dotenv = "^0.21.1"
requests = "^2.31.0"
SQLAlchemy = "^2.0.16"
uvicorn = "^0.18.3"
black = "^23.3.0"
alembic = "^1.11.1"
pytest = "^7.3.2"
unittest2 = "^1.1.0"
loguru = "^0.7.0"
tenacity = "^8.2.2"
psycopg = "^3.1.9"
pre-commit = "^3.3.3"
httpx = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
coverage = "^7.3.0"
